--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "web:port": "expo start --web --port 8085"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.3",
