--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,6 @@
 {
     "cli": {
-        "version": ">= 5.9.0"
+        "version": ">= 7.0.0"
     },
     "build": {
         "development": {
@@ -13,11 +13,7 @@
                 "buildType": "apk"
             }
         },
-        "production": {
-            "android": {
-                "buildType": "apk"
-            }
-        }
+        "production": {}
     },
     "submit": {
         "production": {}
